--- a/pom.xml
+++ b/pom.xml
@@ -78,23 +78,36 @@
                     <artifactId>slf4j-jdk14</artifactId>
              </dependency>
 
-             <!-- unit test -->
-             <dependency>
-                    <groupId>org.camunda.bpm.springboot</groupId>
-                    <artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
-                    <version>${camunda.spring-boot.version}</version>
-                    <scope>test</scope>
-           </dependency>
-             <dependency>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                    <scope>test</scope>
-             </dependency>
-             <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                    <scope>test</scope>
-             </dependency>
+            <!-- unit test -->
+			<dependency>
+				<groupId>org.camunda.bpm.springboot</groupId>
+				<artifactId>camunda-bpm-spring-boot-starter-test</artifactId>
+				<version>${camunda.spring-boot.version}</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
+			    <groupId>org.camunda.bpm.extension.mockito</groupId>
+			    <artifactId>camunda-bpm-mockito</artifactId>
+			    <version>4.13.0</version>
+			    <scope>test</scope>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.camunda.bpm.extension</groupId>
+				<artifactId>camunda-bpm-process-test-coverage</artifactId>
+				<version>0.3.2</version>
+				<scope>test</scope>
+			</dependency>
        </dependencies>
 
        <build>
